--- a/credit.html
+++ b/credit.html
@@ -109,7 +109,7 @@
 				<a class="cd-dropdown-trigger" href="#0">Меню</a>
 				<div class="logo-title">
 					<div>Динамика Архангельск РР</div>
-					<div>Официальный дилер Renault в Архангельске</div>
+					<div>Официальный дилер Renault</div>
 				</div>
 				<nav class="cd-dropdown">
 
@@ -361,9 +361,10 @@
 			<div class="clear"></div>
 			<footer class="foot">
 				<div class="clear"></div>
+				<a href="#" target="_blank"><img rel="nofollow" alt="Динамика" title="Динамика" src="images/logo-dynamica.png"></a>
 				<div class="footer-copyright">
-					<a href="#" target="_blank"><img rel="nofollow" alt="Динамика" title="Динамика" src="images/logo-dynamica.png"></a>
-					© 2015<br>Единая информационная служба: +7 (8182) 462-462<br>
+
+					© 2016<br>Единая информационная служба: +7 (8182) 462-462<br>
 					<a href="/contacts/">Контактная информация</a>
 					&nbsp;&nbsp;
 					<a href="/sitemap/">Карта сайта</a>
