--- a/credit.html
+++ b/credit.html
@@ -107,6 +107,11 @@
 		<header class="menu-header">
 			<div class="cd-dropdown-wrapper">
 				<a class="cd-dropdown-trigger" href="#0">Меню</a>
+        <div class="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
 				<div class="logo-title">
 					<div>Динамика Архангельск РР</div>
 					<div>Официальный дилер Renault</div>
