--- a/blank.html
+++ b/blank.html
@@ -365,14 +365,21 @@
             </td>
           </tr></tbody></table>
 		</nav>
-		<header>
-			<div class="cd-dropdown-wrapper">
-				<a class="cd-dropdown-trigger" href="#0">Dropdown</a>
-				<a class="logo-mobile" href="#0">
 
-				</a>
+		<header class="menu-header">
+			<div class="cd-dropdown-wrapper">
+				<a class="cd-dropdown-trigger" href="#0">Меню</a>
+        <div class="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+				<div class="logo-title">
+					<div>Динамика Архангельск РР</div>
+					<div>Официальный дилер Renault</div>
+				</div>
 				<nav class="cd-dropdown">
-					<div class="logo-title"></div>
+
 					<a href="#0" class="cd-close">Close</a>
 					<ul class="cd-dropdown-content">
 						<li class="menu-title"><a href="#0">Меню</a></li>
@@ -394,55 +401,55 @@
 										<li>
 											<a href="#"  class="car logan">
 												<span>LOGAN</span>
-												<span class="car-price">от 449 000 рублей**</span>
+												<span class="car-price">от 409 000 рублей**</span>
 											</a>
 										</li>
 										<li>
 											<a href="#"  class="car duster">
 												<span>Новый DUSTER</span>
-												<span class="car-price">от 449 000 рублей**</span>
+												<span class="car-price">от 629 000 рублей**</span>
 											</a>
 										</li>
 										<li>
 											<a href="#"  class="car san-stepway">
 												<span>SANDERO Stepway</span>
-												<span class="car-price">от 449 000 рублей**</span>
+												<span class="car-price">от 629 990 рублей**</span>
 											</a>
 										</li>
 										<li>
 											<a href="#"  class="car san">
 												<span>SANDERO</span>
-												<span class="car-price">от 449 000 рублей**</span>
+												<span class="car-price">от 479 900 рублей**</span>
 											</a>
 										</li>
 										<li>
 											<a href="#"  class="car fluence">
 												<span>FLUENCE</span>
-												<span class="car-price">от 449 000 рублей**</span>
+												<span class="car-price">от 869 990 рублей**</span>
 											</a>
 										</li>
 										<li>
 											<a href="#"  class="car megane-h">
 												<span>MEGANE</span>
-												<span class="car-price">от 449 000 рублей**</span>
+												<span class="car-price">от 849 000 рублей**</span>
 											</a>
 										</li>
 										<li>
 											<a href="#"  class="car megane-rs">
 												<span>MEGANE R.S.</span>
-												<span class="car-price">от 449 000 рублей**</span>
+												<span class="car-price">от 1 619 990 рублей**</span>
 											</a>
 										</li>
 										<li>
 											<a href="#"  class="car koleos">
 												<span>KOLEOS</span>
-												<span class="car-price">от 449 000 рублей**</span>
+												<span class="car-price">от 1 299 000 рублей**</span>
 											</a>
 										</li>
 										<li>
 											<a href="#"  class="car kangoo">
 												<span>KANGOO</span>
-												<span class="car-price">от 449 000 рублей**</span>
+												<span class="car-price">от 989 000 рублей**</span>
 											</a>
 										</li>
 									</ul>
