--- a/corporate-customers.html
+++ b/corporate-customers.html
@@ -139,55 +139,55 @@
 										<li>
 											<a href="#"  class="car logan">
 												<span>LOGAN</span>
-												<span class="car-price">от 449 000 рублей**</span>
+												<span class="car-price">от 409 000 рублей**</span>
 											</a>
 										</li>
 										<li>
 											<a href="#"  class="car duster">
 												<span>Новый DUSTER</span>
-												<span class="car-price">от 449 000 рублей**</span>
+												<span class="car-price">от 629 000 рублей**</span>
 											</a>
 										</li>
 										<li>
 											<a href="#"  class="car san-stepway">
 												<span>SANDERO Stepway</span>
-												<span class="car-price">от 449 000 рублей**</span>
+												<span class="car-price">от 629 990 рублей**</span>
 											</a>
 										</li>
 										<li>
 											<a href="#"  class="car san">
 												<span>SANDERO</span>
-												<span class="car-price">от 449 000 рублей**</span>
+												<span class="car-price">от 479 900 рублей**</span>
 											</a>
 										</li>
 										<li>
 											<a href="#"  class="car fluence">
 												<span>FLUENCE</span>
-												<span class="car-price">от 449 000 рублей**</span>
+												<span class="car-price">от 869 990 рублей**</span>
 											</a>
 										</li>
 										<li>
 											<a href="#"  class="car megane-h">
 												<span>MEGANE</span>
-												<span class="car-price">от 449 000 рублей**</span>
+												<span class="car-price">от 849 000 рублей**</span>
 											</a>
 										</li>
 										<li>
 											<a href="#"  class="car megane-rs">
 												<span>MEGANE R.S.</span>
-												<span class="car-price">от 449 000 рублей**</span>
+												<span class="car-price">от 1 619 990 рублей**</span>
 											</a>
 										</li>
 										<li>
 											<a href="#"  class="car koleos">
 												<span>KOLEOS</span>
-												<span class="car-price">от 449 000 рублей**</span>
+												<span class="car-price">от 1 299 000 рублей**</span>
 											</a>
 										</li>
 										<li>
 											<a href="#"  class="car kangoo">
 												<span>KANGOO</span>
-												<span class="car-price">от 449 000 рублей**</span>
+												<span class="car-price">от 989 000 рублей**</span>
 											</a>
 										</li>
 									</ul>
@@ -346,41 +346,100 @@
 				</nav> <!-- .cd-dropdown -->
 			</div> <!-- .cd-dropdown-wrapper -->
 		</header>
-<script>
-	$(document).ready(function(){
-	   $(".sub-subnav-ul").hover(function(){
-		   $(this).prev("a").children(".ar").show();
-	   },function(){
-		   $(this).prev().children(".ar").removeAttr("style");
-	   })
-	   $('.fgallery').fancybox();
-	});
-</script>
+    <script>
+    	$(document).ready(function(){
+    	   $(".sub-subnav-ul").hover(function(){
+    		   $(this).prev("a").children(".ar").show();
+    	   },function(){
+    		   $(this).prev().children(".ar").removeAttr("style");
+    	   })
+    	   $('.fgallery').fancybox();
+    	});
+    </script>
 
 
-<!-- BEGIN: THIS START CONTENT -->
+    <!-- BEGIN: THIS START CONTENT -->
+        <script>
+        $(document).ready(function(){
+           $(".sub-subnav-ul").hover(function(){
+               $(this).prev("a").children(".ar").show();
+           },function(){
+               $(this).prev().children(".ar").removeAttr("style");
+           })
+        });
+    </script><div class="h-content-wrap ">
+        <div class="h-content">
 
+    			            <div class="breadcrumbs"><ul class="breadcrumbs2">
+    <li><a href="/" title="Главная">Главная</a></li>
+    <li class="current"><span>Корпоративным клиентам</span></li>
+    </ul></div>						<h1>Корпоративным клиентам</h1>
+
+                <div class="clear"></div>
+        <aside class="aside">
+          <ul>
+            <li class=""><a href="/corporate-customers/business/">Renault Business</a></li>
+        		<li class=""><a href="/corporate-customers/leasing/">Renault Leasing</a></li>
+        		<li class=""><a href="/corporate-customers/leazing/">Лизинг</a></li>
+        		<li class=""><a href="/corporate-customers/corp_contacts/">Контакты</a></li>
+          </ul>
+        </aside>
+        <div class="h-content-inner">
+            <div>
+      <div>
+        <p align="justify">Вы хотите, чтобы корпоративный автопарк обслуживали профессионалы? Мы разработали комплекс мероприятий для корпоративных клиентов, которые позволят содержать автомобили Вашей компании в исправности и порядке, плюс экономить средства!</p>
+
+        <p align="justify">Мы гарантируем Ваш комфорт – просто откиньтесь в кресле и предоставьте решение всех вопросов профессионалам. Мы предлагаем полный комплекс услуг по техническому обслуживанию и ремонту принадлежащего Вашей компании автопарка, в том числе:</p>
+
+        <ul type="disc">
+    <li style="text-align: justify;">полное техническое обслуживание транспортных средств в объемах и с периодичностью, установленными заводом-изготовителем; гарантийный и послегарантийный ремонт, замена деталей, узлов и агрегатов, пришедших в негодность в процессе эксплуатации; </li>
+
+          <li style="text-align: justify;">доставка транспортного средства эвакуатором при возникновении технической необходимости; </li>
+
+          <li style="text-align: justify;">межсезонная замена авторезины, хранение дополнительных комплектов колес; </li>
+
+          <li style="text-align: justify;">мойка автомобиля при каждом ТО, предоставление подменного транспортного средства на время ремонта по специальному тарифу; </li>
+
+          <li style="text-align: justify;">решение любых проблем, возникающих в процессе эксплуатации автомобильного парка.</li>
+         </ul>
+    <p align="justify">Воспользуйтесь нашим комплексом мероприятий для корпоративных клиентов, и получите целый ряд преимуществ, таких как:</p>
+
+        <ul type="disc">
+    <li style="text-align: justify;">возможность организации ремонта и обслуживание транспортных средств по выходным; </li>
+
+          <li style="text-align: justify;">удобство оплаты, возможны различные формы: от предоплаты до выставления счетов по факту обслуживания; </li>
+
+          <li style="text-align: justify;">полный ассортимент оригинальных запчастей и сопутствующих материалов, необходимых для проведения технического обслуживания и текущего ремонта, cобственные аналитические исследования потребности автопарков в материалах, необходимых для проведения технического обслуживания и текущего ремонта; </li>
+
+          <li style="text-align: justify;">гибкая система скидок на предоставляемые услуги, запчасти и материалы обслуживанием автопарков занимается специальный менеджер по работе с корпоративными клиентами, готовый в любое время ответить на Ваши вопросы.</li>
+        </ul>
+    </div>
+     </div>    </div>
+
+
+    </div>
+    <!-- /h-content -->
+    </div>
+    <!-- /h-content-wrap -->
 
 		<!-- END: THIS FINISH CONTENT -->
 
-			<div class="clear"></div>
-			<footer class="foot">
-				<div class="clear"></div>
-				<a href="#" target="_blank"><img rel="nofollow" alt="Динамика" title="Динамика" src="images/logo-dynamica.png"></a>
-				<div class="footer-copyright">
+    	<div class="clear"></div>
+    	<footer class="foot">
+    		<div class="clear"></div>
+    		<a href="#" target="_blank"><img rel="nofollow" alt="Динамика" title="Динамика" src="images/logo-dynamica.png"></a>
+    		<div class="footer-copyright">
 
-					© 2016<br>Единая информационная служба: +7 (8182) 462-462<br>
-					<a href="/contacts/">Контактная информация</a>
-					&nbsp;&nbsp;
-					<a href="/sitemap/">Карта сайта</a>
-					<span id="bx-composite-banner"></span>
-				</div>
-			</footer>
-		</div> <!-- /h-wrap -->
-		<script src="js/jquery-2.1.1.js"></script>
-		<script src="js/main-menu.js"></script> <!-- Resource jQuery -->
-		<script type="text/javascript" src="http://localhost:35729/livereload.js">
-
-		</script>
+    			© 2016<br>Единая информационная служба: +7 (8182) 462-462<br>
+    			<a href="/contacts/">Контактная информация</a>
+    			&nbsp;&nbsp;
+    			<a href="/sitemap/">Карта сайта</a>
+    			<span id="bx-composite-banner"></span>
+    		</div>
+    	</footer>
+    </div> <!-- /h-wrap -->
+    <script src="js/jquery-2.1.1.js"></script>
+    <script src="js/main-menu.js"></script> <!-- Resource jQuery -->
+    <script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
 	</body>
 </html>
