--- a/blank.html
+++ b/blank.html
@@ -32,12 +32,15 @@
 		<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
 		<link rel="stylesheet" href="css/style-menu.css"> <!-- Resource style -->
 		<script src="js/modernizr.js"></script> <!-- Modernizr -->
+		<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+    <link rel="stylesheet" href="css/style-index-mobile.css" media="screen" title="no title" charset="utf-8">
 
 
 		<!--[if lte IE 8]><link href="css/ie.css" rel="stylesheet" type="text/css" /><![endif]-->
 
 		<!--[if lte IE 8]><script src="js/html5shiv-printshiv.js" type="text/javascript"></script><![endif]-->
-		<script src="//code.jquery.com/jquery-1.8.3.min.js"></script>
+		<!-- <script src="//code.jquery.com/jquery-1.8.3.min.js"></script> -->
 		<script type="text/javascript" src="js/jquery.fancybox.js"></script>
 		<script type="text/javascript" src="js/jquery.masonry.js"></script>
 		<script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
@@ -794,11 +797,66 @@
       </div>
   	</div>
 </div>
+<!-- max-width 940px mobile version  -->
+<div class="mobile-wrapp">
+<div class="home-slider">
+	<div class="home-slider-item" style="background-image: url(images/3bcfb9c8a409d588a17668b49557e13d.jpg);"></div>
+	<div class="home-slider-item" style="background-image: url(images/3194577070437ecde16f50ed755e4d4b.jpg);"></div>
+</div>
 
-<div class="h-content-wrap ">
-    <div class="h-content"><div>
-        <div class="h-content">
-	<div class="help-info group">
+<div class="row-1">
+	<a href="#">
+	<div class="row-1__left">
+		<div class="service-clogan">Сервисные акции</div>
+	</div>
+	</a>
+	<div class="row-1__right">
+		<ul class="nav-topbar">
+			<li class="nav-topbar__item"><a href="#" class="nav-topbar__link">Записаться на тест-драйв</a></li>
+			<li class="nav-topbar__item"><a href="#" class="nav-topbar__link">Автомобили в наличии</a></li>
+			<li class="nav-topbar__item"><a href="#" class="nav-topbar__link">Записаться на ТО</a></li>
+			<li class="nav-topbar__item"><a href="#" class="nav-topbar__link">Заявка на автомобиль</a></li>
+			<li class="nav-topbar__item"><a href="#" class="nav-topbar__link">Renault Russia</a></li>
+		</ul>
+	</div>
+</div>
+<div class="row-2">
+	<a href="#" class="row-2__wrap">
+		<div class="row-2__title">Работа в Renault</div>
+		<div class="row-2__sub-title">Динамика Архангельск РР</div>
+	</a>
+</div>
+<div class="row-3">
+		<h2 class="row-3-title">Свяжитесь с нами</h2>
+		<div class="row-3__sub-title">Мы всегда рады ответить на ваши впоросы</div>
+		<div class="contact-block">
+			<div class="contact-block__item">
+				<h3 class="contact-block__title">Архангельск</h3>
+				<div class="contact-block__row">Отдел продаж: (8182) 462-462</div>
+				<div class="contact-block__row">Cервис: (8182) 421-407</div>
+				<div class="contact-block__row">Адрес: пр. Московский, 33</div>
+				<div class="contact-block__row">Режим работы: <span>с 9:00 до 21:00 без выходных</span></div>
+			</div>
+			<div class="contact-block__item">
+				<h3 class="contact-block__title">Северодвинск</h3>
+				<div class="contact-block__row">Отдел продаж: (8184) 569-999</div>
+				<div class="contact-block__row">Cервис: (8184) 569-995</div>
+				<div class="contact-block__row">Адрес: ул. Транспортная, 1А</div>
+				<div class="contact-block__row">Режим работы: <span>с 9:00 до 21:00 без выходных</span></div>
+			</div>
+			<div class="contact-block__item">
+				<h3 class="contact-block__title">Плесецк</h3>
+				<div class="contact-block__row">Телефон: (81832) 7-33-33 </div>
+				<div class="contact-block__row">Адрес: ул. Юбилейная, 63</div>
+				<div class="contact-block__row">Руководитель автосалона: Неволин Дмитрий</div>
+				<div class="contact-block__row">Режим работы: <span>с 9:00 до 21:00 без выходных</span></div>
+			</div>
+		</div>
+</div>
+</div>
+<!-- end  mobile version-->
+
+
 		 <script type="text/javascript">
 <!--
 $(function() {
@@ -812,7 +870,7 @@ $(function() {
 		$('#site_switcher option[value="35611"]').attr('selected', 'selected');
 	});
 </script><!--		<div class="filter">--><!--			<form action="">--><!--				<select>--><!--					<option>Москва</option>--><!--				</select>--><!--				<select>--><!--					<option>Ваш автосалон</option>--><!--				</select>--><!--				<input type="submit" value="Перейти" />--><!--			</form>--><!--		</div>--><a style="position: absolute; margin-left: 745px; margin-top: -187px;" class="auto-stay" href="/avto/in-stock/">Автомобили в наличии</a>
-	</div>
+
 	 <script>
 jQuery(document).ready(function($) {
 	$('#thumbs').delegate('img','click', function(){
@@ -821,21 +879,17 @@ jQuery(document).ready(function($) {
 	});
 });
 </script><p>
- <br>
- </div>
- <br><aside class="aside"><ul></ul></aside>
-</div>
-<!-- /h-content -->
-</div>
+
+
 <!-- /h-content-wrap -->
 
 		<!-- END: THIS FINISH CONTENT -->
-
+			<div class="h-content-wrap">
 			<div class="clear"></div>
 			<footer class="foot">
 				<div class="clear"></div>
+				<a href="#" target="_blank"><img rel="nofollow" alt="Динамика" title="Динамика" src="images/logo-dynamica.png"></a>
 				<div class="footer-copyright">
-					<a href="#" target="_blank"><img rel="nofollow" alt="Динамика" title="Динамика" src="images/logo-dynamica.png"></a>
 					© 2015<br>Единая информационная служба: +7 (8182) 462-462<br>
 					<a href="/contacts/">Контактная информация</a>
 					&nbsp;&nbsp;
@@ -843,9 +897,18 @@ jQuery(document).ready(function($) {
 					<span id="bx-composite-banner"></span>
 				</div>
 			</footer>
-		</div> <!-- /h-wrap -->
+			</div>	<!-- h-content-wrap -->
+			<!-- /h-content -->
+
+			</div>
+
+
 		<script src="js/jquery-2.1.1.js"></script>
 		<script src="js/main-menu.js"></script> <!-- Resource jQuery -->
+		<!-- <script src="js/jquery-1.12.3.min.js"></script> 		 -->
+		<script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script type="text/javascript" src="js/script-index-mobile.js"></script>
 		<script type="text/javascript" src="http://localhost:35729/livereload.js">
 
 		</script>
