--- a/car-sale.html
+++ b/car-sale.html
@@ -372,12 +372,14 @@
 
     			            <div class="breadcrumbs"><ul class="breadcrumbs2">
     <li><a href="/" title="Главная">Главная</a></li>
-    <li class="current"><span>Корпоративным клиентам</span></li>
-    </ul></div>						<h1>Корпоративным клиентам</h1>
+    <li class="current"><span>Акции</span></li>
+	</ul></div>						<h1>Акции</h1>
 
                 <div class="clear"></div>
-        <aside class="aside"><ul>
-				<li class="active">
+
+				<div onclick="myFunction()" class="dropbtn">Акции</div>
+        <aside id="myDropdown" class="aside"><ul>
+				<li class="">
 					<a href="/shares/car-sale/">Продажа автомобилей</a>
 				</li>
 						<li class="">
@@ -396,7 +398,7 @@
 		<li class="clearfix" id="bx_1914200112_319926">
 		                            <div class="article_pic">
 		                    <a href="/shares/car-sale/novyy-reanault-sandero/">
-		                        <img src="/upload/iblock/97c/97c3310cc891dd25932fa0948923c7cc.jpg" class="pic" alt="Новый Reanault Sandero" width="122" height="62"></a>
+		                        <img src="images/97c3310cc891dd25932fa0948923c7cc.jpg" class="pic" alt="Новый Reanault Sandero" width="122" height="62"></a>
 		                </div>
 
 		            <div class="article_text">
@@ -415,7 +417,7 @@
 		                    <li class="clearfix" id="bx_1914200112_319926">
 		                            <div class="article_pic">
 		                    <a href="/shares/car-sale/novyy-reanault-sandero-stepway/">
-		                        <img src="/upload/iblock/437/43745c94bd9dcda46c6f64b67405a867.jpg" class="pic" alt="Новый Reanault Sandero Stepway" width="122" height="62"></a>
+		                        <img src="images/43745c94bd9dcda46c6f64b67405a867.jpg" class="pic" alt="Новый Reanault Sandero Stepway" width="122" height="62"></a>
 		                </div>
 
 		            <div class="article_text">
@@ -434,7 +436,7 @@
 		                    <li class="clearfix" id="bx_1914200112_319926">
 		                            <div class="article_pic">
 		                    <a href="/shares/car-sale/novyy-reanault-logan/">
-		                        <img src="/upload/iblock/86a/86a18f93c652035c95f199d40a0c2fc1.jpg" class="pic" alt="Новый Reanault Logan" width="122" height="62"></a>
+		                        <img src="images/86a18f93c652035c95f199d40a0c2fc1.jpg" class="pic" alt="Новый Reanault Logan" width="122" height="62"></a>
 		                </div>
 
 		            <div class="article_text">
@@ -453,7 +455,7 @@
 		                    <li class="clearfix" id="bx_1914200112_319926">
 		                            <div class="article_pic">
 		                    <a href="/shares/car-sale/samaya-zhelannaya-premera-vesny/">
-		                        <img src="/upload/iblock/736/7366c817720e3481aaddecbf46a7b9ae.jpg" class="pic" alt="Самая желанная премьера весны" width="117" height="62"></a>
+		                        <img src="images/7366c817720e3481aaddecbf46a7b9ae.jpg" class="pic" alt="Самая желанная премьера весны" width="117" height="62"></a>
 		                </div>
 
 		            <div class="article_text">
@@ -472,7 +474,7 @@
 		                    <li class="clearfix" id="bx_1914200112_319926">
 		                            <div class="article_pic">
 		                    <a href="/shares/car-sale/vygoda-do-50-000-rubley/">
-		                        <img src="/upload/iblock/3b7/3b7c4e5d5c3d191c043a965127d78a11.jpg" class="pic" alt="Выгода до 50 000 рублей" width="93" height="62"></a>
+		                        <img src="images/3b7c4e5d5c3d191c043a965127d78a11.jpg" class="pic" alt="Выгода до 50 000 рублей" width="93" height="62"></a>
 		                </div>
 
 		            <div class="article_text">
@@ -491,7 +493,7 @@
 		                    <li class="clearfix" id="bx_1914200112_319926">
 		                            <div class="article_pic">
 		                    <a href="/shares/car-sale/novogodnyaya-rasprodazha/">
-		                        <img src="/upload/iblock/072/072d2b30bfbad88bc49c60b343faa9b0.jpg" class="pic" alt="Новогодняя РАСПРОДАЖА" width="98" height="47"></a>
+		                        <img src="images/072d2b30bfbad88bc49c60b343faa9b0.jpg" class="pic" alt="Новогодняя РАСПРОДАЖА" width="98" height="47"></a>
 		                </div>
 
 		            <div class="article_text">
@@ -510,7 +512,7 @@
 		                    <li class="clearfix" id="bx_1914200112_319926">
 		                            <div class="article_pic">
 		                    <a href="/shares/car-sale/noch-chernoy-pyatnitsy-v-dinamika-arkhangelsk-reno/">
-		                        <img src="/upload/iblock/0c6/0c6bcf498f6f06d5a91bd1713a47a96d.jpg" class="pic" alt="Ночь черной пятницы в Динамика Архангельск Рено!" width="98" height="49"></a>
+		                        <img src="images/0c6bcf498f6f06d5a91bd1713a47a96d.jpg" class="pic" alt="Ночь черной пятницы в Динамика Архангельск Рено!" width="98" height="49"></a>
 		                </div>
 
 		            <div class="article_text">
@@ -529,7 +531,7 @@
 		                    <li class="clearfix" id="bx_1914200112_319926">
 		                            <div class="article_pic">
 		                    <a href="/shares/car-sale/0-na-avto-sandero-sandero-stepway-duster-logan/">
-		                        <img src="/upload/iblock/f0c/f0cc831f92a314d54039a1dfacceb1b0.jpg" class="pic" alt="0 % на авто Sandero, Sandero Stepway, Duster, Logan." width="98" height="62"></a>
+		                        <img src="images/f0cc831f92a314d54039a1dfacceb1b0.jpg" class="pic" alt="0 % на авто Sandero, Sandero Stepway, Duster, Logan." width="98" height="62"></a>
 		                </div>
 
 		            <div class="article_text">
@@ -548,7 +550,7 @@
 		                    <li class="clearfix" id="bx_1914200112_319926">
 		                            <div class="article_pic">
 		                    <a href="/shares/car-sale/stavka-po-kreditu-0-na-duster-logan-sandero/">
-		                        <img src="/upload/iblock/9fd/9fd23cfce703026e0a90426afabb1c20.jpg" class="pic" alt="Ставка по кредиту 0% на Duster, Logan, Sandero!" width="98" height="62"></a>
+		                        <img src="images/9fd23cfce703026e0a90426afabb1c20.jpg" class="pic" alt="Ставка по кредиту 0% на Duster, Logan, Sandero!" width="98" height="62"></a>
 		                </div>
 
 		            <div class="article_text">
@@ -567,7 +569,7 @@
 		                    <li class="clearfix" id="bx_1914200112_319926">
 		                            <div class="article_pic">
 		                    <a href="/shares/car-sale/kredit-0-na-sandero-stepway/">
-		                        <img src="/upload/iblock/e34/e349ab47b54d4829c144a53911d8de5b.jpg" class="pic" alt="Кредит 0 % на Sandero Stepway" width="98" height="62"></a>
+		                        <img src="images/e349ab47b54d4829c144a53911d8de5b.jpg" class="pic" alt="Кредит 0 % на Sandero Stepway" width="98" height="62"></a>
 		                </div>
 
 		            <div class="article_text">
@@ -586,7 +588,7 @@
 		                    <li class="clearfix" id="bx_1914200112_319926">
 		                            <div class="article_pic">
 		                    <a href="/shares/car-sale/renault-koleos-so-skidkoy-300-000-rubley/">
-		                        <img src="/upload/iblock/c5c/c5cdb39c5ceb0893e4d28979caab703a.png" class="pic" alt="Renault Koleos со скидкой 300 000 рублей!" width="98" height="62"></a>
+		                        <img src="images/c5cdb39c5ceb0893e4d28979caab703a.png" class="pic" alt="Renault Koleos со скидкой 300 000 рублей!" width="98" height="62"></a>
 		                </div>
 
 		            <div class="article_text">
@@ -605,7 +607,7 @@
 		                    <li class="clearfix" id="bx_1914200112_319926">
 		                            <div class="article_pic">
 		                    <a href="/shares/car-sale/pereydite-na-novyy-renault/">
-		                        <img src="/upload/iblock/9e3/9e31b73265429edb4b668cd783efa744.jpg" class="pic" alt="Перейдите на новый Renault!" width="98" height="62"></a>
+		                        <img src="images/9e31b73265429edb4b668cd783efa744.jpg" class="pic" alt="Перейдите на новый Renault!" width="98" height="62"></a>
 		                </div>
 
 		            <div class="article_text">
@@ -624,7 +626,7 @@
 		                    <li class="clearfix" id="bx_1914200112_319926">
 		                            <div class="article_pic">
 		                    <a href="/shares/car-sale/renault-fluence-po-tsenam-2014-g/">
-		                        <img src="/upload/iblock/70b/70be4649ac4bb8366cec4c09ce506417.jpg" class="pic" alt="Renault Fluence по ценам 2014 г!" width="98" height="62"></a>
+		                        <img src="images/70be4649ac4bb8366cec4c09ce506417.jpg" class="pic" alt="Renault Fluence по ценам 2014 г!" width="98" height="62"></a>
 		                </div>
 
 		            <div class="article_text">
