--- a/corporate-customers.html
+++ b/corporate-customers.html
@@ -376,14 +376,20 @@
     </ul></div>						<h1>Корпоративным клиентам</h1>
 
                 <div class="clear"></div>
-        <aside class="aside">
-          <ul>
-            <li class=""><a href="/corporate-customers/business/">Renault Business</a></li>
-        		<li class=""><a href="/corporate-customers/leasing/">Renault Leasing</a></li>
-        		<li class=""><a href="/corporate-customers/leazing/">Лизинг</a></li>
-        		<li class=""><a href="/corporate-customers/corp_contacts/">Контакты</a></li>
-          </ul>
-        </aside>
+				<!-- start -->
+
+					<div onclick="myFunction()" class="dropbtn">Корпоративным клиентам</div>
+					<aside id="myDropdown" class="aside">
+	          <ul>
+	            <li class=""><a href="/corporate-customers/business/">Renault Business</a></li>
+	        		<li class=""><a href="/corporate-customers/leasing/">Renault Leasing</a></li>
+	        		<li class=""><a href="/corporate-customers/leazing/">Лизинг</a></li>
+	        		<li class=""><a href="/corporate-customers/corp_contacts/">Контакты</a></li>
+	          </ul>
+	        </aside>
+
+				<!-- end -->
+
         <div class="h-content-inner">
             <div>
       <div>
