--- a/ecording-on-service.html
+++ b/ecording-on-service.html
@@ -379,8 +379,8 @@
 
 
 
-
-        <aside class="aside">
+				<div onclick="myFunction()" class="dropbtn">Корпоративным клиентам</div>
+        <aside id="myDropdown" class="aside">
           <ul>
             <li class=""><a href="/corporate-customers/business/">Renault Business</a></li>
         		<li class=""><a href="/corporate-customers/leasing/">Renault Leasing</a></li>
