--- a/leasing.html
+++ b/leasing.html
@@ -376,7 +376,8 @@
     </ul></div>						<h1>Корпоративным клиентам</h1>
 
                 <div class="clear"></div>
-        <aside class="aside">
+				<div onclick="myFunction()" class="dropbtn">Корпоративным клиентам</div>
+        <aside id="myDropdown" class="aside">
           <ul>
             <li class=""><a href="/corporate-customers/business/">Renault Business</a></li>
         		<li class=""><a href="/corporate-customers/leasing/">Renault Leasing</a></li>
@@ -384,6 +385,7 @@
         		<li class=""><a href="/corporate-customers/corp_contacts/">Контакты</a></li>
           </ul>
         </aside>
+
 				<div class="h-content-inner">
 				        С 1 июня программа RenaultLeasing присоединяется к государственной программе льготного автолизинга, что позволит значительно улучшить условия для наших корпоративных покупателей. <br><br><b>Основная информация о гос. программе лизинга: </b><br><ul>
 				<li>Срок : программа анонсирована до конца 2015 года </li>
