--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
       <h3>Мобильная версия сайта Renault</h3>
-      <div><a href="blank-mobile.html">Главная страница</a></div>
+      <div><a href="blank.html">Главная страница</a></div>
       <div><a href="car-sale.html">Акции</a></div>
       <div><a href="corporate-customers.html">Типовая страница</a></div>
       <div><a href="ecording-on-service.html">Страница с формами</a></div>
